improve knowledge related to java and spring